# simple-couch

./: README.md  simple-couch.cabal  stack.yaml
src/Database/: CouchDB.hs
src/Database/CouchDB/: Instances.hs  Types.hs
