name:                simple-couch
version:             0.1.0
synopsis:            Simple utility lib for talking to CouchDB
description:         Simple utility lib for talking to CouchDB
homepage:            https://github.com/ralphmorton/simple-couch#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Ralph Morton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.CouchDB.Types, Database.CouchDB.Instances, Database.CouchDB
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.1.3.1
                     , bytestring >= 0.10.6.0
                     , lens >= 4.13
                     , aeson >= 0.9.0.1
                     , http-client >= 0.4.28
                     , http-types >= 0.9
                     , nano-http >= 0.1.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/simple-couch
